--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^2.0.0",
     "gulp-uglifyjs": "^0.6.2",
     "gulp.spritesmith": "^6.2.1",
     "imagemin-pngquant": "^5.0.0"
